--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -25,6 +25,15 @@
 - name: "roadmap"
   color: "0088CC"
   description: ""
+- name: "priority:low"
+  color: "FBE5C8"
+  description: ""
+- name: "priority:middle"
+  color: "B6E5D8"
+  description: ""
+- name: "priority:high"
+  color: "FFC2C7"
+  description: ""
 - name: "day:early"
   color: "E98980"
   description: ""
