--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,7 +38,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@papercups-io/chat-widget": "^1.1.0-beta.0",
+    "@papercups-io/chat-widget": "^1.1.0",
     "@segment/consent-manager": "^5.0.1",
     "@segment/in-regions": "^1.2.2",
     "@sentrei/common": "^1.52.1-beta.1",
