perf: ⚡️ revert trailing trash

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -4,7 +4,7 @@
   "cleanUrls": true,
   "public": false,
   "scope": "sentrei",
-  "trailingSlash": true,
+  "trailingSlash": false,
   "github": {
     "enabled": false,
     "autoJobCancelation": true,
