--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -62,6 +62,7 @@
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "babel-plugin-styled-components": "^1.11.1",
     "next": "^9.5.3",
+    "next-compose-plugins": "^2.2.0",
     "next-google-fonts": "^1.2.1",
     "next-optimized-images": "^3.0.0-canary.10",
     "next-plugin-bundle-stats": "^2.2.0",
