--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/sentrei/sentrei.git",
     "directory": "packages/video"
   },
-  "license": "MIT",
+  "license": "GNU GPL V3",
   "author": "Shun Kakinoki",
   "main": "dist/index.js",
   "module": "dist/index.js",
