--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -7,6 +7,7 @@ on:
       - main
 jobs:
   labels:
+    if: github.actor != 'sentrei-bot'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
