--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -39,7 +39,7 @@ jobs:
           environment: "Vercel production main"
       - if: github.ref == 'refs/heads/main'
         timeout-minutes: 300
-        uses: amondnet/vercel-action@v19.0.1+3
+        uses: amondnet/vercel-action@master
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -70,7 +70,7 @@ jobs:
           environment: "Vercel preview ${{ env.BRANCH_NAME }}"
       - if: github.ref != 'refs/heads/main'
         timeout-minutes: 300
-        uses: amondnet/vercel-action@v19.0.1+3
+        uses: amondnet/vercel-action@master
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
