--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -43,7 +43,7 @@ jobs:
           ref: ${{ github.branch }}
           target_url: https://${{ github.event.pull_request.base.ref }}.preview.sentrei.com
           environment: "Web pull ${{ github.event.pull_request.base.ref }}"
-      - uses: amondnet/vercel-action@v19.0.1+3
+      - uses: amondnet/vercel-action@master
         timeout-minutes: 30
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
