--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,7 +25,7 @@
     "cypress:install": "cypress install",
     "deploy": "yarn run deploy:web",
     "deploy:web": "firebase deploy --only hosting:web",
-    "dev": "nodemon --exec 'next-translate && next dev'",
+    "dev": "NODE_OPTIONS='--inspect' nodemon --exec 'next-translate && next dev'",
     "export": "next export",
     "firebase:alpha": "yarn run alpha:local && yarn run dev",
     "firebase:beta": "yarn run beta:local && yarn run dev",
