--- a/packages/@types/package.json
+++ b/packages/@types/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/sentrei/sentrei.git",
     "directory": "packages/@types"
   },
-  "license": "GNU GPL V3",
+  "license": "GPL-3.0-or-later",
   "author": "Shun Kakinoki",
   "main": "dist/index.js",
   "module": "dist/index.js",
