feat: 🎸 complete upgrade all packages w/ ncu

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,16 +49,16 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@next/bundle-analyzer": "^9.5.3",
-    "@sentrei/common": "^1.52.1-beta.1",
-    "@sentrei/types": "^1.52.1-beta.1",
-    "@sentrei/ui": "^1.52.1-beta.1",
-    "@sentrei/video": "^1.52.1-beta.1",
-    "@sentry/browser": "^5.23.0",
-    "@sentry/integrations": "5.23.0",
-    "@sentry/node": "^5.23.0",
-    "@sentry/webpack-plugin": "^1.12.1",
-    "@types/react": "^16.9.49",
+    "@next/bundle-analyzer": "^9.5.4",
+    "@sentrei/common": "^1.118.0",
+    "@sentrei/types": "^1.118.0",
+    "@sentrei/ui": "^1.118.0",
+    "@sentrei/video": "^1.118.0",
+    "@sentry/browser": "^5.25.0",
+    "@sentry/integrations": "5.25.0",
+    "@sentry/node": "^5.25.0",
+    "@sentry/webpack-plugin": "^1.13.0",
+    "@types/react": "^16.9.51",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "babel-plugin-styled-components": "^1.11.1",
     "next": "^9.5.4",
@@ -68,26 +68,26 @@
     "next-plugin-bundle-stats": "^2.2.0",
     "next-seo": "^4.11.0",
     "next-sitemap": "^1.2.4",
-    "next-translate": "^0.17.2-canary.6",
+    "next-translate": "^0.17.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-optimized-image": "^0.4.1",
-    "recoil": "^0.0.10",
+    "recoil": "^0.0.13",
     "styled-components": "^5.2.0",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.1",
     "@cypress/code-coverage": "^3.8.1",
-    "@cypress/webpack-preprocessor": "^5.4.5",
+    "@cypress/webpack-preprocessor": "^5.4.6",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@relative-ci/agent": "^1.3.0",
-    "@sentry/cli": "^1.56.1",
+    "@sentry/cli": "^1.58.0",
     "babel-plugin-istanbul": "^6.0.0",
     "cross-env": "^7.0.2",
-    "cypress": "^5.1.0",
-    "start-server-and-test": "^1.11.3"
+    "cypress": "^5.3.0",
+    "start-server-and-test": "^1.11.5"
   },
   "publishConfig": {
     "access": "public"
