--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -86,29 +86,29 @@
   "dependencies": {
     "@firebase/testing": "^0.20.11",
     "@google-cloud/pubsub": "^2.5.0",
-    "@sendgrid/mail": "^7.2.5",
-    "@sentrei/common": "^1.52.1-beta.1",
-    "@sentrei/types": "^1.52.1-beta.1",
-    "@sentry/node": "^5.23.0",
-    "@slack/web-api": "^5.11.0",
+    "@sendgrid/mail": "^7.2.6",
+    "@sentrei/common": "^1.118.0",
+    "@sentrei/types": "^1.118.0",
+    "@sentry/node": "^5.25.0",
+    "@slack/web-api": "^5.12.0",
     "@types/analytics-node": "^3.1.3",
     "@types/lodash": "^4.14.161",
     "analytics-node": "^3.4.0-beta.2",
-    "deep-equal": "^2.0.3",
-    "firebase-admin": "^9.1.1",
+    "deep-equal": "^2.0.4",
+    "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "firebase-functions-test": "^0.2.2",
-    "firebase-tools": "^8.10.0",
-    "jest": "^26.4.2",
+    "firebase-tools": "^8.12.0",
+    "jest": "^26.5.2",
     "jest-when": "^2.7.2",
     "lodash": "^4.17.20",
-    "stripe": "8.94.0",
+    "stripe": "8.107.0",
     "tscpaths": "^0.0.9",
-    "twilio": "^3.49.1",
-    "uuid": "^8.3.0"
+    "twilio": "^3.49.4",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "ts-jest": "^26.3.0"
+    "ts-jest": "^26.4.1"
   },
   "engines": {
     "node": "10",
