--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -33,44 +33,44 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
-    "@primer/octicons-react": "^9.0.0",
-    "@sentrei/common": "^1.52.1-beta.1",
-    "@sentrei/types": "^1.52.1-beta.1",
-    "@sentrei/ui": "^1.52.1-beta.1",
+    "@primer/octicons-react": "^11.0.0",
+    "@sentrei/common": "^1.118.0",
+    "@sentrei/types": "^1.118.0",
+    "@sentrei/ui": "^1.118.0",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.2",
-    "@testing-library/react-hooks": "^3.4.1",
-    "@types/d3-timer": "^1.0.9",
-    "@types/enzyme": "^3.10.6",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/react-hooks": "^3.4.2",
+    "@types/d3-timer": "^2.0.0",
+    "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/fscreen": "^1.0.1",
     "@types/lodash.throttle": "^4.1.6",
-    "@types/node": "^12.12.26",
-    "@types/react": "^16.9.49",
-    "@types/twilio-video": "^2.7.0",
+    "@types/node": "^14.11.5",
+    "@types/react": "^16.9.51",
+    "@types/twilio-video": "^2.7.1",
     "clsx": "^1.1.1",
     "d3-timer": "^2.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "fscreen": "^1.0.2",
-    "is-plain-object": "^4.1.1",
-    "isomorphic-fetch": "^2.2.1",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "fscreen": "^1.1.0",
+    "is-plain-object": "^5.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-test-renderer": "^16.13.1",
-    "twilio": "^3.49.1",
+    "twilio": "^3.49.4",
     "twilio-video": "^2.7.2"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "enzyme-to-json": "^3.5.0",
-    "jest": "^26.4.2",
-    "jest-junit": "^11.1.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "jest": "^26.5.2",
+    "jest-junit": "^12.0.0",
     "mocha": "^8.1.3",
     "mocha-junit-reporter": "^2.0.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.3.0"
+    "ts-jest": "^26.4.1"
   },
   "publishConfig": {
     "access": "public"
