perf: ⚡️ upgrade sentrei packages

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,8 +39,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@papercups-io/chat-widget": "^1.1.0",
-    "@sentrei/common": "^1.118.0",
-    "@sentrei/types": "^1.118.0",
+    "@sentrei/common": "*",
+    "@sentrei/types": "*",
     "@sentry/browser": "^5.25.0",
     "@types/classnames": "^2.2.10",
     "@types/emoji-mart": "^3.0.2",
