--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -34,9 +34,9 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@primer/octicons-react": "^11.0.0",
-    "@sentrei/common": "^1.118.0",
-    "@sentrei/types": "^1.118.0",
-    "@sentrei/ui": "^1.118.0",
+    "@sentrei/common": "*",
+    "@sentrei/types": "*",
+    "@sentrei/ui": "*",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/react-hooks": "^3.4.2",
