--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,10 +50,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@next/bundle-analyzer": "^9.5.4",
-    "@sentrei/common": "^1.118.0",
-    "@sentrei/types": "^1.118.0",
-    "@sentrei/ui": "^1.118.0",
-    "@sentrei/video": "^1.118.0",
+    "@sentrei/common": "*",
+    "@sentrei/types": "*",
+    "@sentrei/ui": "*",
+    "@sentrei/video": "*",
     "@sentry/browser": "^5.25.0",
     "@sentry/integrations": "5.25.0",
     "@sentry/node": "^5.25.0",
