--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@segment/snippet": "^4.13.1",
-    "@sentrei/types": "^1.118.0",
+    "@sentrei/types": "*",
     "@sentry/browser": "^5.25.0",
     "@sentry/integrations": "5.25.0",
     "@stripe/stripe-js": "^1.9.0",
