--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -87,8 +87,8 @@
     "@firebase/testing": "^0.20.11",
     "@google-cloud/pubsub": "^2.5.0",
     "@sendgrid/mail": "^7.2.6",
-    "@sentrei/common": "^1.118.0",
-    "@sentrei/types": "^1.118.0",
+    "@sentrei/common": "*",
+    "@sentrei/types": "*",
     "@sentry/node": "^5.25.0",
     "@slack/web-api": "^5.12.0",
     "@types/analytics-node": "^3.1.3",
