--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -48,7 +48,10 @@
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "stripe": "^8.107.0"
+    "remark": "^12.0.1",
+    "remark-html": "^13.0.1",
+    "stripe": "^8.107.0",
+    "vfile": "^4.2.0"
   },
   "publishConfig": {
     "access": "public"
