--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -40,6 +40,7 @@
     "dayjs": "^1.9.1",
     "firebase": "^7.22.1",
     "firebase-admin": "^9.2.0",
+    "gray-matter": "^4.0.2",
     "lodash": "^4.17.20",
     "lodash.get": "^4.4.2",
     "mitt": "^2.1.0",
@@ -50,8 +51,7 @@
     "react-dom": "^16.13.1",
     "remark": "^12.0.1",
     "remark-html": "^13.0.1",
-    "stripe": "^8.107.0",
-    "vfile": "^4.2.0"
+    "stripe": "^8.107.0"
   },
   "publishConfig": {
     "access": "public"
