feat: 🎸 ini package-json:check

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ncu:self:check": "ncu -p yarn",
     "ncu:self:upgrade": "ncu -u -p yarn",
     "ncu:upgrade": "lerna run ncu:upgrade --stream",
+    "package-json:check": "npmPkgJsonLint .",
     "now-build": "yarn run typescript && lerna run build --scope @sentrei/web",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
@@ -85,6 +86,7 @@
     "husky": "^4.3.0",
     "json-sort-cli": "^1.16.4",
     "nodemon": "^2.0.4",
+    "npm-package-json-lint": "^5.1.0",
     "npm-check-updates": "^9.0.4",
     "prettier": "^2.1.2",
     "semantic-release": "^17.1.2",
