--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "fix": "yarn run jsonsort:fix && yarn run sort-package-json:fix && yarn run eslint:fix && yarn run prettier:fix",
     "jsonsort:check": "jsonsort .devcontainer .vscode locales -a -c",
     "jsonsort:fix": "jsonsort .devcontainer .vscode locales -a",
-    "lint": "yarn run jsonsort:check && yarn run sort-package-json:check && yarn run eslint:check && yarn run prettier:check",
+    "lint": "yarn run package-json:check && yarn run jsonsort:check && yarn run sort-package-json:check && yarn run eslint:check && yarn run prettier:check",
     "ncu:check": "lerna run ncu:check --stream",
     "ncu:self:check": "ncu -p yarn",
     "ncu:self:upgrade": "ncu -u -p yarn",
