perf: ⚡️ ncu upgrade all

--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "jsonsort:check": "jsonsort .devcontainer .vscode locales -a -c",
     "jsonsort:fix": "jsonsort .devcontainer .vscode locales -a",
     "lint": "yarn run package-json:check && yarn run jsonsort:check && yarn run sort-package-json:check && yarn run eslint:check && yarn run prettier:check",
-    "ncu:check": "lerna run ncu:check --stream",
-    "ncu:self:check": "ncu -p yarn",
-    "ncu:self:upgrade": "ncu -u -p yarn",
-    "ncu:upgrade": "lerna run ncu:upgrade --stream",
+    "ncu:check": "yarn run ncu:check:self && yarn run ncu:check:packages",
+    "ncu:check:packages": "lerna run ncu:check --stream",
+    "ncu:check:self": "ncu -p yarn",
+    "ncu:upgrade": "yarn run ncu:upgrade:self && yarn run ncu:upgrade:packages",
+    "ncu:upgrade:packages": "lerna run ncu:upgrade --stream",
+    "ncu:upgrade:self": "ncu -u -p yarn",
     "package-json:check": "npmPkgJsonLint .",
     "now-build": "yarn run typescript && lerna run build --scope @sentrei/web",
     "prettier:check": "prettier --check .",
