--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -70,6 +70,7 @@
     "react-intersection-observer": "^8.29.0",
     "react-parallax-tilt": "^1.4.66",
     "react-player": "^2.6.2",
+    "react-spring": "^9.0.0-rc.3",
     "react-rough-notation": "^1.0.0",
     "react-toggle-dark-mode": "^1.0.2",
     "react-useanimations": "^2.0.5",
