feat: 🎸 ini cypress build

--- a/packages/web/.nycrc.json
+++ b/packages/web/.nycrc.json
@@ -1,6 +1,14 @@
 {
+  "extension": [".js", ".jsx", ".ts", ".tsx"],
   "extends": "@istanbuljs/nyc-config-typescript",
+  "include": ["pages_/**/*"],
+  "exclude": ["pages/api/__coverage__.js"],
+  "report-dir": "cypress-coverage",
+  "reporter": [
+    "json",
+    "lcov"
+  ],
   "all": true,
-  "check-coverage": true,
-  "include": ["pages_/**/*.tsx", "src/**/*.ts", "src/**/*.tsx"]
+  "sourceMap": true,
+  "instrument": true
 }
