--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -81,13 +81,15 @@
   "devDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.1",
     "@cypress/code-coverage": "^3.8.1",
-    "@cypress/webpack-preprocessor": "^5.4.6",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@relative-ci/agent": "^1.3.0",
     "@sentry/cli": "^1.58.0",
+    "@testing-library/cypress": "^7.0.1",
+    "@types/testing-library__cypress": "^5.0.8",
     "babel-plugin-istanbul": "^6.0.0",
     "cross-env": "^7.0.2",
     "cypress": "^5.3.0",
+    "nyc": "^15.1.0",
     "start-server-and-test": "^1.11.5"
   },
   "publishConfig": {
