--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -67,10 +67,10 @@ jobs:
           state: "failure"
           deployment_id: ${{ steps.pull.outputs.deployment_id }}
           target_url: https://${{ github.event.pull_request.base.ref }}.preview.sentrei.com
-      - working-directory: packages/video
+      - working-directory: packages/web
         run: |
           yarn run build:test
-      - working-directory: packages/video
+      - working-directory: packages/web
         run: |
           yarn run test
       - uses: codecov/codecov-action@v1.0.13
