--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -69,6 +69,9 @@ jobs:
           target_url: https://${{ github.event.pull_request.base.ref }}.preview.sentrei.com
       - working-directory: packages/web
         run: |
+          yarn run cypress:install
+      - working-directory: packages/web
+        run: |
           yarn run test
       - uses: codecov/codecov-action@v1.0.13
         continue-on-error: true
