--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,7 +50,7 @@
     "watch": "cd ../.. && yarn run watch"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^v5.0.0-alpha.12",
     "@next/bundle-analyzer": "^9.5.5",
     "@sentrei/common": "*",
     "@sentrei/types": "*",
