--- a/packages/@types/package.json
+++ b/packages/@types/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@firebase/firestore-types": "^1.13.0",
     "@google-cloud/firestore": "^4.4.0",
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^v5.0.0-alpha.12",
     "firebase": "^7.23.0",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
