--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,8 +35,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^1.0.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^v5.0.0-alpha.12",
+    "@material-ui/icons": "^5.0.0-alpha.11",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@papercups-io/chat-widget": "^1.1.0",
     "@sentrei/common": "*",
