--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -44,7 +44,7 @@
     "lodash": "^4.17.20",
     "lodash.get": "^4.4.2",
     "mitt": "^2.1.0",
-    "next": "^9.5.5",
+    "next": "^9.5.6-canary.0",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
