--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -55,7 +55,7 @@
     "clsx": "^1.1.1",
     "emoji-mart": "^3.0.0",
     "framer-motion": "^2.8.0",
-    "next": "^9.5.5",
+    "next": "^9.5.6-canary.0",
     "next-locale": "^1.14.1",
     "next-seo": "^4.11.0",
     "react": "^16.13.1",
