--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^v5.0.0-alpha.12",
-    "@next/bundle-analyzer": "^9.5.5",
+    "@next/bundle-analyzer": "^9.5.6-canary.0",
     "@sentrei/common": "*",
     "@sentrei/types": "*",
     "@sentrei/ui": "*",
@@ -62,7 +62,7 @@
     "@sentry/webpack-plugin": "^1.13.0",
     "@types/react": "^16.9.52",
     "@zeit/next-source-maps": "0.0.4-canary.1",
-    "next": "^9.5.5",
+    "next": "^9.5.6-canary.0",
     "next-compose-plugins": "^2.2.0",
     "next-google-fonts": "^1.2.1",
     "next-locale": "^1.14.1",
